--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "grid-matic",
   "version": "1.0.0",
-  "description": "",
+  "description": "A CLI tool to generate responsive CSS grid layouts.",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
     "grid-matic": "./cli.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": ["grid", "CSS", "responsive", "layout", "CLI", "generator"],
+  "author": "Mokshe Jain",
+  "license": "MIT",
   "dependencies": {
     "chalk": "^5.3.0",
     "yargs": "^17.7.2"
